# rubber-duck

./: .gitignore  CMakeLists.txt  Install.md  Readme.md  RubberDuckConfig.cmake.in  license.txt  makefile
demos/: CMakeLists.txt  makefile
demos/Assembly/: Assembly.cpp  CMakeLists.txt  makefile
demos/FMS/: CMakeLists.txt  FMS.cpp  makefile
demos/Inventory/: CMakeLists.txt  Inventory.cpp  makefile
demos/Philosopher/: CMakeLists.txt  Philosopher.cpp  makefile
demos/QueueReplication/: CMakeLists.txt  QueueReplication.cpp  makefile
examples/: CMakeLists.txt  makefile
examples/AbleBaker_3P/: AbleBaker_3P.cpp  AbleBaker_3P.h  CMakeLists.txt  ablebaker_3p.txt  makefile
examples/AbleBaker_ES/: AbleBaker_ES.cpp  CMakeLists.txt  makefile
examples/AbleBaker_PI/: AbleBaker_PI.cpp  CMakeLists.txt  makefile
examples/DumpTruck_3P/: CMakeLists.txt  DumpTruck_3P.cpp  DumpTruck_3P.h  makefile
examples/DumpTruck_ES/: CMakeLists.txt  DumpTruck_ES.cpp  DumpTruck_ES.h  makefile
examples/DumpTruck_PI/: CMakeLists.txt  DumpTruck_PI.cpp  makefile
examples/Philosopher_3P/: CMakeLists.txt  Philosopher_3P.cpp  Philosopher_3P.h  makefile
examples/Philosopher_ES/: CMakeLists.txt  Philosopher_ES.cpp  makefile
examples/Philosopher_PI/: CMakeLists.txt  Philosopher_PI.cpp  makefile
examples/Queue/: CMakeLists.txt  Queue.cpp  makefile
examples/Queue3P/: CMakeLists.txt  Queue_3P.cpp  Queue_3P.h  makefile
examples/QueueBatch/: CMakeLists.txt  Queue.cpp  makefile
examples/QueueES/: CMakeLists.txt  Queue_ES.cpp  makefile
examples/QueuePI/: CMakeLists.txt  Queue_PI.cpp  makefile
examples/QueueRandom/: CMakeLists.txt  Queue.cpp  makefile
examples/Queue_PI2/: CMakeLists.txt  Queue_PI2.cpp  makefile
examples/Random/: CMakeLists.txt  RandomTest.cpp  makefile
examples/RandomTest/: CMakeLists.txt  RandomTest.cpp  makefile
lib/: CMakeLists.txt  CProcess.cpp  CProcess.h  Coroutine.cpp  Coroutine.h  DataCollection.cpp  DataCollection.h  Error.cpp  Error.h  EventList.h  EventNotice.h  Petri.cpp  Petri.h  ProcessNotice.cpp  ProcessNotice.h  Queue.h  Random.cpp  Random.h  Simulator.cpp  Simulator.h  Task.cpp  Task.h  makefile  platdefs.h
