add_subdirectory(AbleBaker_3P)
add_subdirectory(AbleBaker_ES)
add_subdirectory(AbleBaker_PI)
add_subdirectory(DumpTruck_3P)
add_subdirectory(DumpTruck_ES)
add_subdirectory(DumpTruck_PI)
add_subdirectory(Philosopher_3P)
add_subdirectory(Philosopher_ES)
add_subdirectory(Philosopher_PI)
add_subdirectory(Queue)
add_subdirectory(Queue_PI2)
add_subdirectory(Queue3P)
add_subdirectory(QueueBatch)
add_subdirectory(QueueES)
add_subdirectory(QueuePI)
add_subdirectory(QueueRandom)
add_subdirectory(Random)
add_subdirectory(RandomTest)


